chore(docs): use pageSize instead of pageLimit, add open api docs
`pageSize` seems a bit more user friendly than `pageLimit`. We may want to consider adding `hasNextPage` or something similar.
